tests/neg-custom-args/captures/polyCaptures.check
-- Error: tests/neg-custom-args/captures/polyCaptures.scala:4:25 -------------------------------------------------------
4 |val runOpsCheck: [cap C] -> (ops: List[() ->{C} Unit]) ->{C} Unit = runOps  // error
  |                         ^
  |          Implementation restriction: polymorphic function types cannot wrap function types that have capture sets
-- Error: tests/neg-custom-args/captures/polyCaptures.scala:5:26 -------------------------------------------------------
5 |val runOpsCheck2: [cap C] => (ops: List[() ->{C} Unit]) ->{C} Unit = runOps // error
  |                          ^
  |          Implementation restriction: polymorphic function types cannot wrap function types that have capture sets
